--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>SUDOKO SOLVER</h1>
+    <div id="board"></div>
+    <br>
+    <div id="numbers"></div>
+    <div id="reset">RESET</div>
+    <div id="submit">SUBMIT</div>
     <script src="script.js"></script>
 </body>
 </html>
