--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>SUDOKO SOLVER</h1>
-    <div id="board"></div>
-    <br>
-    <div id="numbers"></div>
-    <div id="reset">RESET</div>
-    <div id="submit">SUBMIT</div>
+    <div id="container">
+        <h1>SUDOKO SOLVER</h1>
+        <div id="board"></div>
+        <br>
+        <div id="numbers"></div>
+        <div id="last">
+            <div id="reset" class="small">RESET</div>
+            <div id="submit" class="small">SUBMIT</div>
+        </div>
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
